--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -306,9 +306,18 @@ jobs:
           issue-number: ${{ github.event.pull_request.number }}
           body-path: checkov_result/results_github_failed_only.md
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@c47758b77c9736f4b2ef4073d4d51994fabfe349
+
       - name: Build Docker image for scanning
-        run: |
-          docker build -t flask-react-app:${{ steps.extract_branch.outputs.branch_hash }} .
+        uses: docker/build-push-action@4f58ea79222b3b9dc2c8bbdd6debcef730109a75
+        with:
+          context: .
+          push: false
+          load: true
+          tags: flask-react-app:${{ steps.extract_branch.outputs.branch_hash }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Checkout base branch for baseline scan
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
@@ -317,10 +326,14 @@ jobs:
           path: baseline
 
       - name: Build baseline Docker image
-        run: |
-          cd baseline
-          docker build -t flask-react-app:baseline .
-          cd ..
+        uses: docker/build-push-action@4f58ea79222b3b9dc2c8bbdd6debcef730109a75
+        with:
+          context: ./baseline
+          push: false
+          load: true
+          tags: flask-react-app:baseline
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Run Trivy scan on baseline Docker image
         id: trivy_docker_baseline
